chore(app/components/forms/)[factories-production-centers-form]: update style

--- a/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
+++ b/src/app/components/forms/factories-production-centers-form/factories-production-centers-form.component.html
@@ -13,6 +13,17 @@
     />
   </div>
 
+  <div class="flex flex-row-reverse col-span-12 mt-3">
+    <app-button
+      [rounded]="true"
+      (click)="resetFpcForm()"
+      styleClass="px-7"
+      severity="info"
+    >
+      {{ appTitle.buttons.add.addUser }}
+    </app-button>
+  </div>
+
   <!-- Form -->
   <form
     class="grid grid-cols-12 gap-4 col-span-12"
@@ -32,8 +43,6 @@
           [control]="fpcId"
           validationField="id"
           [addonWidth]="addonWidth"
-          buttonIcon="pi pi-user-plus"
-          (clickButton)="resetFpcForm()"
         />
       </div>
 
