--- a/src/app/components/shared/layout/sidebar/logo/logo.component.html
+++ b/src/app/components/shared/layout/sidebar/logo/logo.component.html
@@ -1,16 +1,14 @@
-<div class="flex flex-col items-center h-60">
-  <div class="h-50 w-full flex justify-center">
-    <img
-      src="/assets/rmto-logo.png"
-      class="object-cover dark:hidden h-full"
-      alt="RMTO Logo"
-    />
-
-    <img
-      src="/assets/rmto-logo-dark.png"
-      class="object-cover hidden dark:block h-full"
-      alt="RMTO Logo"
-    />
-  </div>
-  <span class="text-center text-xs" [innerHTML]="websiteTitle"></span>
+<div class="flex flex-col items-center h-70 relative overflow-hidden">
+  <img
+    ngSrc="/assets/rmto-logo-full-text.png"
+    fill
+    class="object-contain dark:hidden"
+    alt="RMTO Logo"
+  />
+  <img
+    ngSrc="/assets/rmto-logo-dark-full-text.png"
+    fill
+    class="object-contain hidden dark:block"
+    alt="RMTO Logo"
+  />
 </div>
