--- a/src/app/components/shared/layout/header/header/header.component.html
+++ b/src/app/components/shared/layout/header/header/header.component.html
@@ -1,23 +1,39 @@
-<div
-  class="relative w-full rounded-bl-3xl h-full bg-primary text-primary-contrast lg:pr-4 py-2 z-15 flex items-center justify-between"
->
-  <p-button severity="primary" class="lg:hidden" (onClick)="openSidebar()">
-    <i class="pi pi-align-right text-xl"></i>
-  </p-button>
-  <div class="flex items-center justify-center gap-4 m-auto lg:m-0">
-    <i class="pi text-xl scale-120" [class]="headerData.icon"></i>
-    <span class="text-md font-bold">{{ headerData.title }}</span>
-  </div>
-  <div class="lg:flex flex-row-reverse items-center justify-center gap-2 px-2">
-    <app-user-profile [profile]="profile" class="hidden lg:block" />
-    <app-wallet-profile [wallet]="wallet" class="hidden lg:block" />
+<app-frame-header>
+  <div class="flex items-center justify-between">
+    <!-- Sidebar toggle button (Mobile) -->
+    <p-button severity="primary" class="lg:hidden" (onClick)="openSidebar()">
+      <i class="pi pi-align-right text-xl"></i>
+    </p-button>
 
-    <app-theme-management class="hidden lg:block" />
-    <!-- Logo  -->
-    <img
-      class="h-10 w-10 ml-1 lg:hidden"
-      src="assets/rmto-logo-noText.png"
-      alt="Logo"
-    />
+    <!-- Header title & icon -->
+    <div class="flex items-center justify-center gap-4 m-auto lg:m-0">
+      <i class="pi text-xl scale-120" [class]="headerData.icon"></i>
+      <span class="text-md font-bold">{{ headerData.title }}</span>
+    </div>
+
+    <!-- User / Wallet / Theme / Logo -->
+    <div
+      class="lg:flex flex-row-reverse items-center justify-center gap-2 px-2"
+    >
+      <!-- Desktop components -->
+      <app-user-profile
+        [profile]="profile"
+        class="hidden lg:block"
+      ></app-user-profile>
+
+      <app-wallet-profile
+        [wallet]="wallet"
+        class="hidden lg:block"
+      ></app-wallet-profile>
+
+      <app-theme-management class="hidden lg:block"></app-theme-management>
+
+      <!-- Logo (Mobile) -->
+      <img
+        src="assets/rmto-logo-noText.png"
+        alt="Logo"
+        class="h-10 w-10 ml-1 lg:hidden"
+      />
+    </div>
   </div>
-</div>
+</app-frame-header>
