feat(ticket-track-form):add ticket-track-form pass userId and captcha guard

--- a/src/app/components/forms/tickets-management-form/ticket-track-form/ticket-track-form.component.html
+++ b/src/app/components/forms/tickets-management-form/ticket-track-form/ticket-track-form.component.html
@@ -101,8 +101,11 @@
     [(visible)]="chatDialogVisible"
     [style]="{ width: '40rem' }"
   >
-    @if (chatDialogVisible) {
-      <app-ticket-chat-message-form [ticket]="currentTicket()" />
+    @if (chatDialogVisible && currentTicket()) {
+      <app-ticket-chat-message-form
+        [ticket]="currentTicket()"
+        [userId]="currentTicket()?.userId ?? 0"
+      />
     }
   </p-dialog>
 }
