--- a/src/app/components/shared/inputs/date-picker-input/date-picker-input.component.html
+++ b/src/app/components/shared/inputs/date-picker-input/date-picker-input.component.html
@@ -1,22 +1,28 @@
-<div class="flex w-full">
-  <p-input-group styleClass="h-2-5rem w-full">
-    <!-- 🎨 Icon or 🏷️ Label Addon -->
-    @if (label.trim() === "") {
-      <p-inputgroup-addon
-        class="bg-primary-emphasis text-primary-contrast flex items-center justify-center px-4 rounded-l-2xl border-primary-emphasis"
-        [style.width]="addonWidth"
+<div class="flex w-full h-10">
+  <p-input-group>
+    <p-inputgroup-addon
+      [style]="{
+        flex: '0 0 ' + addonWidth,
+        padding: 0,
+        margin: 0,
+        border: 0,
+      }"
+      class="rounded-2xl"
+    >
+      <div
+        class="w-full h-full flex justify-center items-center py-4 px-6 bg-primary-emphasis z-1 rounded-r-2xl text-primary-contrast"
       >
-        <i [class]="icon"></i>
-      </p-inputgroup-addon>
-    }
-    @if (label.trim() !== "") {
-      <p-inputgroup-addon
-        class="bg-primary-emphasis text-primary-contrast p-0 rounded-r-2xl border-primary-emphasis h-full flex items-center justify-center"
-        [style.width]="addonWidth"
-      >
-        <span class="text-sm whitespace-nowrap">{{ label }}</span>
-      </p-inputgroup-addon>
-    }
+        @if (label.trim() === "") {
+          <i [class]="icon"></i>
+        } @else {
+          <span
+            class="text-sm text-primary-contrast"
+            style="white-space: nowrap"
+            >{{ label }}</span
+          >
+        }
+      </div>
+    </p-inputgroup-addon>
 
     <!-- 📅 Persian Date Input -->
     <div class="w-full relative">
@@ -29,6 +35,7 @@
           <input
             #inputRef
             pInputText
+            [tabIndex]="control.disabled || readOnly ? -1 : 0"
             [formControl]="control"
             [placeholder]="placeholder"
             [readOnly]="readOnly"
