--- a/src/app/pages/home/home-page.component.scss
+++ b/src/app/pages/home/home-page.component.scss
@@ -49,8 +49,12 @@
   }
   /* Fade-out keyframes */
   @keyframes fade-out {
-    from { opacity: 1; }
-    to { opacity: 0; }
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
   }
 
   /* Fade-out animation class */
@@ -72,5 +76,4 @@
       }
     }
   }
-
 }
